tests/NormalTests/paczka1/small_fuzzy/15799939.err
Error in line 4: Rzeg0 A634 35,7
Error in line 10: on2W6hCsCyh S692 90,7
Error in line 9: Rzeg0 S2 70,3
